buildscript {
	repositories {
		mavenCentral()
	}
	dependencies { classpath ('com.vladsch.flexmark:flexmark-all:0.19.3') }
}

plugins {
	id 'java'
	id 'application'
	id 'maven-publish'
	id 'signing'
	id 'org.openjfx.javafxplugin' version '0.1.0'
}

javafx {
	version = '21.0.6'
	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
}

application {
	mainClass = "application.ui.Launcher"
}
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
javadoc {
	options.encoding = 'UTF-8'
	options.source = 17
	options.links('https://docs.oracle.com/en/java/javase/17/docs/api/');
}
java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

def gitOutput = { List<String> cmd ->
	try {
		def proc = cmd.execute(null, projectDir)
		proc.waitFor()
		return proc.exitValue()==0 ? proc.text.trim() : null
	} catch (Exception e) {
		return null
	}
}
def gitHead = gitOutput(['git', 'rev-parse', 'HEAD'])
def gitClean = gitOutput(['git', 'status', '--porcelain'])==''
def repoRevision = (gitHead!=null && gitClean) ? gitHead
			: (System.getenv("REPO_REVISION")!=null ? System.getenv("REPO_REVISION") : repositoryRevision)

group = "org.daisy.dotify"

sourceSets {
	main {
		java {
			srcDir 'src'
		}
		resources {
			srcDir 'src'
		}
	}
	test {
		java {
			srcDir 'test'
		}
		resources {
			srcDir 'test'
		}
	}
}

jar {
	doFirst {
		manifest {
	    	attributes ('Built-By': System.getProperty("user.name"),
	    	'Built-On': new Date().format("yyyy-MM-dd"),
			'Repository-Revision': "$repoRevision",
			'Implementation-Title': "$releaseName",
			'Implementation-Version': archiveVersion,
			'Implementation-URL': "$repositoryURL",
			'Main-Class': 'application.ui.Launcher',
			'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' ')
			)
		}
	}
	from sourceSets.main.allJava
}

repositories {
    mavenCentral()
    //mavenLocal()
    maven { url "https://oss.sonatype.org/content/groups/staging" }
    //maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
}

dependencies {
	compileOnly 'org.osgi:org.osgi.service.component.annotations:1.3.0'

	implementation ('org.daisy.braille:braille-utils.pef-tools:6.0.0') {
		exclude module: 'Saxon-HE'
	}
	implementation 'com.googlecode.ajui:ajui:1.0.0'
	
	implementation 'org.daisy.dotify:dotify.api:5.0.0'
	implementation 'org.daisy.streamline:streamline-api:1.6.0'
	implementation 'org.daisy.dotify:dotify.common:4.4.0'
	implementation ('org.daisy.streamline:streamline-engine:1.3.0') {
		exclude module: 'streamline-api'
	}
	implementation 'org.fxmisc.richtext:richtextfx:0.10.5'
	
	testImplementation group: 'junit', name: 'junit', version: "4.12"
	
	runtimeOnly 'org.slf4j:slf4j-jdk14:1.7.2'
	runtimeOnly ('org.daisy.dotify:dotify.formatter.impl:5.0.1') {
		exclude module: 'Saxon-HE'
	}
	runtimeOnly 'org.daisy.dotify:dotify.hyphenator.impl:5.0.0'
	runtimeOnly 'org.daisy.dotify:dotify.text.impl:5.0.0'
	runtimeOnly 'org.daisy.dotify:dotify.translator.impl:5.1.0'
	runtimeOnly ('org.daisy.dotify:dotify.task.impl:5.0.0') {
		exclude module: 'Saxon-HE'
	}
	runtimeOnly 'org.daisy.braille:braille-utils.impl:7.0.0'

	runtimeOnly ('org.daisy.streamline:format-catalog:1.2.0') {
		exclude module: 'streamline-api'
	}
	
	runtimeOnly ('org.daisy.dotify:docs-to-html:1.0.0') {
		exclude module: 'streamline-api'
	}

}

task copyDocResources(type: Copy) {
	from ('docs') {
		include('**/*.png')
		include('**/*.css')
	}
	into ('build/docs/man')
}

task convertDocs(dependsOn: ['copyDocResources']) {
	def outputDir = file('build/docs/man')
	def inputDir = file('docs')
	inputs.dir inputDir
	outputs.dir outputDir
	doLast() {
	    def options = new com.vladsch.flexmark.util.options.MutableDataSet().set(
		    			com.vladsch.flexmark.parser.Parser.EXTENSIONS,
		    			Arrays.asList(
		    				com.vladsch.flexmark.ext.autolink.AutolinkExtension.create(),
		    				com.vladsch.flexmark.ext.gfm.strikethrough.StrikethroughExtension.create(),
		    				com.vladsch.flexmark.ext.wikilink.WikiLinkExtension.create()
		    			)
	    			).set(
	    				com.vladsch.flexmark.ext.wikilink.WikiLinkExtension.LINK_FILE_EXTENSION,
	    				".html"
	    			)

	    def parser = com.vladsch.flexmark.parser.Parser.builder(options).build()
	    def renderer = com.vladsch.flexmark.html.HtmlRenderer.builder(options).build()
		def inputEncoding = 'UTF-8'
		def outputEncoding = 'UTF-8'
		def language = 'en'
		outputDir.mkdirs()
		fileTree(dir: inputDir, include: '*.md')
			.filter{it.isFile()}
			.each {
				file("${outputDir}/${it.name[0..-4]}.html").write(
					"<?xml version=\"1.0\" encoding=\""
					+ outputEncoding+"\"?>\n<html xmlns=\"http://www.w3.org/1999/xhtml\" xml:lang=\""
					+ language+"\">\n<head>\n<meta charset=\""
					+ outputEncoding+"\"/>\n<link rel=\"stylesheet\" type=\"text/css\" href=\"styles/style.css\">\n</head>\n<body>"
					+ renderer.render(parser.parse(it.getText(inputEncoding)))
					+ "</body>\n</html>", outputEncoding
				)
			}
	}
}

distributions {
    main {
        contents {
            from(convertDocs) {
                into "docs"
            }
            from(file('installer/examples')) {
            	into 'examples'
            }
        }
    }
}

task javadocJar(type: Jar) {
	archiveClassifier = 'javadoc'
	from javadoc
}

task sourcesJar(type: Jar) {
	archiveClassifier = 'sources'
	from sourceSets.main.allSource
}

ext.isReleaseVersion = !version.endsWith("SNAPSHOT")

signing {
	required { isReleaseVersion }
	sign publishing.publications
}

publishing {
	//Only upload if a git hash is supplied. On Travis only upload snapshots.
	//enabled = repoRevision.size()==40 && System.getenv("TRAVIS_BUILD_ID")!=null
	publications {
		maven(MavenPublication) {
			from components.java
			artifact sourcesJar
			artifact javadocJar
			artifact distZip
			artifact distTar
			/*
			if (isReleaseVersion) {
				beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
			}*/
			pom {
				name = 'dotify-studio'
				packaging = 'jar'
				description = 'Dotify Studio'
				url = "$repositoryURL"
				scm {
					connection = "$repositorySCM"
					developerConnection = "$repositorySCM"
					url = "$repositoryURL"
				}
				licenses {
					license {
						name = 'LGPL'
						url = 'http://www.gnu.org/licenses/lgpl.html'
					}
				}
				developers {
					developer {
						id = 'joel'
						name = 'Joel Håkansson'
					}
				}
			}
		}
	}
	repositories {
		maven {
			def stagingRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
			def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
			url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : stagingRepoUrl
			credentials {
				username = sonatypeUsername
				password = sonatypePassword
			}
		}
	}
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
// Native packages (jpackage). A package can only be built on its own platform,
// so the Windows installer is built by the GitHub Actions workflow.
//   ./gradlew jpackage -PpackageType=app-image|dmg|msi -PpackageJdk=<JDK used as bundled runtime>
def appVersion = version.replaceAll(/-SNAPSHOT$/, '')

task jpackageInput(type: Sync, dependsOn: installDist) {
	from("$buildDir/install/dotify-studio/lib")
	from("$buildDir/install/dotify-studio") {
		include 'docs/**'
		include 'examples/**'
	}
	into "$buildDir/jpackage/input"
}

task jpackage(dependsOn: jpackageInput) {
	group = 'distribution'
	description = 'Creates a native application package with jpackage.'
	doLast {
		def os = org.gradle.internal.os.OperatingSystem.current()
		def jdk = file(project.findProperty('packageJdk') ?: System.getProperty('java.home'))
		def type = project.findProperty('packageType') ?: 'app-image'
		def runtimeRelease = file("$jdk/release").readLines().find { it.startsWith('JAVA_VERSION=') }
		def runtimeFeature = (runtimeRelease =~ /"(\d+)/)[0][1] as int
		def dest = file("$buildDir/jpackage/$type")
		delete dest
		def cmd = [ "$jdk/bin/jpackage${os.windows ? '.exe' : ''}",
			'--type', type,
			'--dest', dest,
			'--input', file("$buildDir/jpackage/input"),
			'--main-jar', jar.archiveFileName.get(),
			'--main-class', 'application.ui.Launcher',
			'--name', 'Dotify Studio',
			'--app-version', appVersion,
			'--vendor', 'Dotify Studio',
			'--description', 'Create, manage and emboss PEF files',
			'--copyright', 'LGPL 2.1'
		]
		if (runtimeFeature >= 24) {
			// JavaFX 21 uses native access and sun.misc.Unsafe, which newer runtimes warn about
			cmd += [ '--java-options', '--enable-native-access=ALL-UNNAMED',
					'--java-options', '--sun-misc-unsafe-memory-access=allow' ]
		}
		if (os.macOsX) {
			cmd += [ '--icon', file('installer/dotify-studio.icns'),
					'--mac-package-identifier', 'org.daisy.dotify.studio' ]
		} else if (os.windows) {
			cmd += [ '--icon', file('installer/dotify-studio.ico') ]
			if (type != 'app-image') {
				cmd += [ '--win-menu', '--win-menu-group', 'Dotify Studio',
						'--win-shortcut', '--win-dir-chooser', '--win-per-user-install',
						'--win-upgrade-uuid', '5b0f7f64-2c55-4f0e-9d8e-6f3e2a7c1d42' ]
			}
		}
		exec { commandLine cmd.collect { it.toString() } }
	}
}
